Changed visibility for watchlist and cleaned code slightly

--- a/style.css
+++ b/style.css
@@ -80,3 +80,20 @@ button {
 .popup h2 {
     color: black;   
 }
+
+.more-info:hover {
+    cursor: pointer;
+}
+
+.list-add:hover {
+    cursor: pointer;
+}
+
+.red {
+    color:red;
+}
+
+.blue {
+    background-color:blue;
+}
+
