--- a/style.css
+++ b/style.css
@@ -12,6 +12,23 @@
     padding: 5px;
 }
 
+h1 {
+    font-size: x-large;
+}
+
+.popup h1 {
+    font-size: 150%;
+    margin: 10px;
+}
+
+.popup h3 {
+    margin: 10px;
+}
+
+.popup p {
+    margin: 10px;
+}
+
 body {
     background-color: black;
     color: white;
@@ -64,16 +81,19 @@ p {
     margin-top: 10px; 
 }
 
+
+
 .material-icons {
     position: absolute;
-    bottom: 2px;
-    right: 2px;
+    bottom: 5px;
+    right: 5px;
+    margin-top: 5px;
     
 }
 
 .info {
     position: absolute;
-    bottom: 2px;
+    bottom: 5px;
     right: 32px;
 }
 
@@ -86,10 +106,16 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    box-shadow: 0px 0px 60px #FFCA93;
+    border-radius: 8px;
 }
 
-.popup h2 {
-    color: black;   
+.popular {
+    text-align: center;
+    margin-bottom: 10px;
+    color: #6FD1F2;
+    font-size: 200%;
+    
 }
 
 .more-info:hover {
@@ -100,8 +126,8 @@ p {
     cursor: pointer;
 }
 
-.red {
-    color:red;
+.watchlist {
+    color: #ADCE9E;
 }
 
 .search-fields {
@@ -120,6 +146,7 @@ p {
 
 .search-title input {
     background-color: #F75A96; 
+    border: 1pt solid white;
     margin: 5px; 
 }
 
@@ -133,6 +160,7 @@ p {
 
 .search-rating input {
     background-color: #ADCE9E;
+    border: 1pt solid white;
     margin: 5px;     
 }
 
@@ -151,7 +179,8 @@ input {
     width: 200px; 
     border: 0px;
     color: white;
-    font-size: 15px; 
+    font-size: 15px;
+    padding-left: 5px; 
 }
 
 ::placeholder{
